[metadata]
name = django_twitch_auth
version = 0.1.0
author = LeoNextLevel
author_email = leonextlevel@gmail.com
description = Django Authetication with Twitch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leonextlevel/django-twitch-auth
project_urls =
    Bug Tracker = https://github.com/leonextlevel/django-twitch-auth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
